# fynth

./: CMakeLists.txt  LICENSE  Makefile  README.md  error.cpp  error.h  fft.cpp  fft.h  filter.h  main.cpp  main.h  sample.cpp  sample.h  sf2.cpp  sf2.h  terminal.cpp  terminal.h  types.h  utils.cpp  utils.h
